# rust-scraper-pro

./: .env.example  .gitignore  AI_UPGRADE_SUMMARY.md  Cargo.toml  DATABASE_INTEGRATION.md  EXAMPLES.md  FINAL_STATUS.md  FIX_REPORT.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION.md  INTEGRATION_SUMMARY.md  MULTI_SOURCE_AI_DEMO.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  VERIFICATION_REPORT.md  commands.sh  info.txt
config/: settings.toml  sources.toml
docs/: AI_REFINEMENT.md  EXAMPLES.md  SCRAPER_ADAPTIVE_MODE.md  VISION_AND_POTENTIAL.md  VISION_AND_POTENTIAL_AR.md
examples/: advanced_pipeline.rs  ai_features_demo.rs  ecommerce_scraper.rs  multi_source_ai_pipeline.rs  multi_source_pipeline.rs  multi_source_scraper.rs  news_crawler.rs  news_scraper.rs  social_scraper.rs
frontend/: index.html  tailwind.config.js  vite.config.ts
frontend/config/: settings.toml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartCard.tsx  DataTable.tsx  (+8 more)
output/: data.csv  data.json
scripts/: setup_database.sh
src/: lib.rs  main.rs
src/ai/: adaptive_delay.rs  deepseek_client.rs  mod.rs  normalizer.rs  selector_assistant.rs
src/core/: config.rs  mod.rs  models.rs  scraper.rs
src/output/: api.rs  csv.rs  database.rs  json.rs  mod.rs
src/processors/: deduplicator.rs  mod.rs  normalizer.rs  pipeline.rs  validator.rs
src/sources/: custom.rs  ecommerce.rs  mod.rs  news.rs  social.rs  source.rs
src/utils/: cache.rs  error.rs  logger.rs  mod.rs  rate_limiter.rs  time.rs
tests/: integration_tests.rs  unit_tests.rs
(+2 files in other folders)
