[package]
name = "rust-scraper-pro"
version = "0.1.0"
edition = "2024" 
description = "A professional web scraping library built in Rust"
authors = ["abdulwahed-sweden"]
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/rust-scraper-pro.git"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.8"
csv = "1.4.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
futures = "0.3.31"
async-trait = "0.1.89"
url = "2.5.7"
regex = "1.12.2"
lazy_static = "1.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
hyper = "1.7.0"
rustls = "0.23.34"
serde_urlencoded = "0.7.1"
moka = { version = "0.12.11", features = ["sync", "future"] }
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.7.0"
